# JARVIS_AI

./: .env  .gitignore  Agent.py  Listen.py  README.md  Speak.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
