[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.21.0",
    "google>=3.0.0",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.5",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "speechrecognition>=3.14.3",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
